# DEMON-material

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COMMIT_MSG_lexicon.txt  LICENSE-MIT  README.md  pyproject.toml
acestep/: fixtures.py  gpu_config.py  lora_metadata.py  model_downloader.py  paths.py  setup.py  user_uploads.py
acestep/engine/: canvas.py  dcw.py  diffusion.py  lora.py  model_adapter.py  model_context.py  ode_steps.py  runtime_init.py  server.py  session.py  stream.py
acestep/engine/trt/: _engine_metadata.py  build.py  calibration_hub.py  dreamvae_export.py  export.py  fp8_onnx.py  lora_refit.py  onnx_hub.py  onnx_upload.py  profile_manager.py  runtime.py  vae_export.py
acestep/models/: dreamvae.py  modeling_acestep_v15_base.py  modeling_acestep_v15_turbo.py  modeling_acestep_v15_xl_turbo.py
acestep/nodes/: channel_nodes.py  cond_nodes.py  diffusion_nodes.py  interpolation.py  lora_nodes.py  types.py  vae_nodes.py
acestep/steering/: __init__.py  catalog.py  controller.py  hub.py  policy.py  types.py
acestep/streaming/: ace_backend.py  audio_engine.py  config.py  diffusion_backend.py  encode.py  events.py  families.py  generator_backend.py  knobs.py  pipeline_runner.py  session.py  state.py  stems.py
demos/: test_stream_cover_graph.py
demos/common/: static_site.py
demos/realtime_motion_graph/: pipeline.py  server.py
demos/realtime_motion_graph/client/: knobs.py
demos/realtime_motion_graph_web/: README.md  audio_codec.py  audio_engine.py  backend.py  control_http.py  headless_client.py  mcp_server.py  pipeline.py  prompt_enhancer.py  protocol.py  run.py  server.py  session_registry.py  ws_adapter.py
demos/realtime_motion_graph_web/scripts/: gen_wire_types.py
docs/: INSTALL.md  TRT.md  VOCALSTEM.md  index.html
scripts/: ace_drain_parity.py  collect_activation_absmax.py  collect_decoder_calibration.py  flow_control_harness.py  precompute_fixture_sidecars.py
scripts/benchmarks/: validate_chunked_vae_encode.py
scripts/calibration/: precompute_fixture_sidecars.py
scripts/deploy/: bootstrap_h100.sh  smoketest_demo.py
tests/benchmarks/: curve_convergence.py
tests/golden/: README.md  client.py  compare.py  conftest.py  local_server.py  refs.json  refs_store.py  replay_server.py  runner.py  scenarios.py  test_golden.py  test_latency.py
tests/integration/: test_shared_sde_curve.py
tests/tools/: profile_decoder_latency.py  profile_fp8_vs_bf16.py
tests/unit/: test_ace_adapter_parity.py  test_build_preset.py  test_client_sdk.py  test_emit_trim.py  test_engine_profiles.py  test_golden_harness.py  test_headless_client.py  test_knob_homonyms.py  test_lora_eager.py  test_lora_metadata.py  test_lora_refit.py  test_melband_park_policy.py  test_model_context_parking.py  test_onnx_staleness.py  test_params_coalescing.py  test_pending_stems_gating.py  test_playhead_staleness.py  test_setup_starter_loras.py  test_slice_flow_control.py  test_source_canvas.py  test_static_site.py  test_streaming_create_cleanup.py  test_trt_vae_profile_fit.py  test_upload_encoder.py  test_upload_two_phase.py  test_user_upload_stems.py  test_vendored_dit_loads.py  test_wire_contract.py  test_ws_preemption.py
(+196 files in other folders)
